# skye-jiajun-mlops

./: README.md  Task1_Task2.ipynb  app.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Task1_Task2-checkpoint.ipynb
models/jiajun/: final_model_mushroom.pkl
models/skye/: tuned_model_for_price_prediction.pkl
templates/: jiajun_classification.html  skye_prediction.html
